# src/infra/controller/Order.ts
@@ -3,12 +3,15 @@ import { OrderRepository } from "@/application/repository";
 import { CompleteOrderPreparation} from "@/application/usecase";
 import HttpServer, { ResponseNoContent, ResponseOK } from "../http/HttpServer";
 import { FinishOrder } from "@/application/usecase/FinishOrder";
+import { OrderQuery } from "@/infra/projection/Order";
+import { OrderNotFoundError } from "@/application/error";
 
 export class OrderController {
   static registerRoutes(
     httpServer: HttpServer,
     orderRepository: OrderRepository,
     eventPublisher: EventPublisher,
+    orderQuery: OrderQuery
   ) {
     const completeOrderPreparationUseCase = new CompleteOrderPreparation(
       orderRepository,
@@ -18,6 +21,14 @@ export class OrderController {
       orderRepository,
       eventPublisher
     );
+
+    httpServer.get("/orders/:id", (request) => {
+      return orderQuery.findById(request.params.id)
+      .then(order => {
+        if (!order) throw OrderNotFoundError
+        return order
+      }).then(ResponseOK);
+    });
 
     httpServer.patch("/orders/:id/ready", (request) => {
       return completeOrderPreparationUseCase
